# imaditor

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  brushes.cpp  brushes.h  font-icons.h  glad.c  glarraybuffer.cpp  glarraybuffer.h  glprogram.cpp  glprogram.h  image.cpp  image.h  images.cpp  images.h  imgui.ini  imgui_impl_glfw_gl3.cpp  imgui_tabs.cpp  imgui_tabs.h  layer.cpp  layer.h  log.cpp  log.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h  state.h  tools.cpp  tools.h
actions/: baseaction.cpp  baseaction.h  brushaction.cpp  brushaction.h  dropperaction.cpp  dropperaction.h  eraseaction.cpp  eraseaction.h  floodfillaction.cpp  floodfillaction.h
cmake/: Dependencies.cmake
include/glad/: glad.h
tests/: CMakeLists.txt  layer-tests.cpp
